--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,3 +13,17 @@
 body {
   
 }
+
+
+@keyframes verticalScroll {
+  from {
+    transform: translateY(-10%);
+  }
+  to {
+    transform: translateY(250%);
+  }
+}
+
+.animate-verticalScroll {
+  animation: verticalScroll 5s linear infinite;
+}
