--- a/src/components/home/calculatorSection/Calculator.css
+++ b/src/components/home/calculatorSection/Calculator.css
@@ -21,7 +21,7 @@
 }
 
 /* Custom Slider Styling */
-input[type='range'] {
+.calculator input[type='range'] {
   -webkit-appearance: none; /* Remove default styling */
   width: 100%;
   height: 12px;
@@ -31,7 +31,7 @@ input[type='range'] {
 }
 
 /* Thumb styling */
-input[type='range']::-webkit-slider-thumb {
+.calculator input[type='range']::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
   width: 30px;
@@ -44,7 +44,7 @@ input[type='range']::-webkit-slider-thumb {
 }
 
 /* Range styling */
-input[type='range']::-webkit-slider-runnable-track {
+.calculator input[type='range']::-webkit-slider-runnable-track {
   background: linear-gradient(
     to right,
     #007C75 0%,
@@ -56,12 +56,12 @@ input[type='range']::-webkit-slider-runnable-track {
   border-radius: 5px;
 }
 
-input[type='range']:hover::-webkit-slider-thumb {
+.calculator input[type='range']:hover::-webkit-slider-thumb {
   background-color: #f1f1f1; /* Light grey on hover */
 }
 
 /* This is needed to dynamically update the range track */
-input[type='range'] {
+.calculator input[type='range'] {
   --range-value: 0%;
 }
 
