fixed bug and started mutual fund page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,3 +40,9 @@ body {
 .animate-horizontalScroll {
   animation: horizontalScroll 5s linear infinite;
 }
+
+@media (max-width: 640px) {
+  body {
+    overflow-x: hidden;
+  }
+}
