--- a/src/sections/home/trailblazorsSection/Trailblazors.css
+++ b/src/sections/home/trailblazorsSection/Trailblazors.css
@@ -7,39 +7,25 @@
   );
 }
 
-/* @keyframes slide-back-and-forth {
-    0%, 100% {
-      transform: translateX(30%);
-    }
-    50% {
-      transform: translateX(-30%); 
-    }
-  } */
 
 
-  @keyframes slide-pendulum {
+  @keyframes slide-card {
     0% {
-      transform: translateX(30%); /* Start with the first card fully visible */
-    }
-    50% {
-      transform: translateX(-30%) ; /* Move to show the last card */
+      transform: translateX(120%); 
     }
     100% {
-      transform: translateX(30%); /* Return to the first card */
+      transform: translateX(-120%); 
     }
   }
 
 
   @media (max-width: 768px) {
-    @keyframes slide-pendulum {
+    @keyframes slide-card {
       0% {
-        transform: translateX(200%); /* Start with the first card fully visible */
-      }
-      50% {
-        transform: translateX(-200%) ; /* Move to show the last card */
+        transform: translateX(320%); 
       }
       100% {
-        transform: translateX(200%); /* Return to the first card */
+        transform: translateX(-320%); 
       }
     }
   }
