add react-fast-marquee dependency and update various text content for clarity and accuracy

--- a/src/sections/home/trailblazorsSection/Trailblazors.css
+++ b/src/sections/home/trailblazorsSection/Trailblazors.css
@@ -9,7 +9,7 @@
 
 
 
-  @keyframes slide-card {
+  /* @keyframes slide-card {
     0% {
       transform: translateX(120%); 
     }
@@ -28,7 +28,12 @@
         transform: translateX(-320%); 
       }
     }
-  }
+  } */
+
+
+  
+  
+  
   
   
   
